src/views/collection/DiscoverCollectionsView.less
@import '../../../resources/styles/_antd-theme.less';
@import '../../../resources/styles/_colours.less';

  .discover-collections__ {
    &container {
      animation: slide-in 0.5s 0.5s both;
      margin-top: 0px !important;
    }

    &header-container {
      margin-bottom: 42px;
      background-color: @shade-4;
      padding: 4px 0px;
      animation: slide-in 0.5s 0s both;
    }

    &header {
      display: flex;
      justify-content: space-between;
      align-items: center;

      h1 {
        strong {
          color: @dark-blue;
          font-weight: normal;
          a {
            color: @dark-blue;
            font-weight: normal;
            text-decoration: none;
          }
        }

        color: @mid-blue;
        font-weight: normal;
        font-size: 32px;
        line-height: 32px;
        margin: 0px;
        padding: 0px;

        .discipline-subject {
          animation: slide-right 0.5s 0s both;
        }
      }
    }

    &subjects {
      animation: slide-in 0.5s 0.2s both;
      margin-bottom: 40px;
    }

    &subjects-list {
      padding-left: 0;
    }

    &subject-link {
      display: block;

      width: 100%;
      margin-bottom: 12px;

      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;

      text-decoration: none;

      span {
        display: inline;
      }
    }

    &subject-list-item {
      list-style-type: none;
    }
  }


@media (max-width: @screen-sm-max) {
  .discover-collections__header {
    height: 60px;

    h1 {
      font-size: 22px;
      line-height: 26px;
    }
  }

  .discover-collections__header-container {
    margin-bottom: 22px;
  }

  .discover-collections__subject-link {
    font-size: 16px;
    line-height: 22px;
    font-weight: bold;
    text-decoration: none;
  }

  .discover-collections__subjects-list {
    margin-left: 30px;
    margin-bottom: 0;
  }

  .discover-collections__subject-list-item {
    padding-bottom: 18px;
    list-style-type: disc;
    color: @shade-4;
  }

  .discover-collections__subject-list-item:last-child {
    padding-bottom: 0;
  }
}

